; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/smartpqi/extr_smartpqi_queue.c_pqisrc_create_op_queues.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/smartpqi/extr_smartpqi_queue.c_pqisrc_create_op_queues.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PQI_STATUS_SUCCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"IN\0A\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"OUT\0A\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"OUT failed %d\0A\00", align 1
@PQI_STATUS_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pqisrc_create_op_queues(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32, i32* @PQI_STATUS_SUCCESS, align 4
  store i32 %5, i32* %4, align 4
  %6 = call i32 (i8*, ...) @DBG_FUNC(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @pqisrc_alloc_and_create_ib_queues(i32* %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %33

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @pqisrc_alloc_and_create_ob_queues(i32* %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %12
  br label %30

18:                                               ; preds = %12
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @pqisrc_alloc_and_create_event_queue(i32* %19)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %18
  br label %27

24:                                               ; preds = %18
  %25 = call i32 (i8*, ...) @DBG_FUNC(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %26 = load i32, i32* %4, align 4
  store i32 %26, i32* %2, align 4
  br label %37

27:                                               ; preds = %23
  %28 = load i32*, i32** %3, align 8
  %29 = call i32 @pqisrc_destroy_op_ob_queues(i32* %28)
  br label %30

30:                                               ; preds = %27, %17
  %31 = load i32*, i32** %3, align 8
  %32 = call i32 @pqisrc_destroy_op_ib_queues(i32* %31)
  br label %33

33:                                               ; preds = %30, %11
  %34 = load i32, i32* %4, align 4
  %35 = call i32 (i8*, ...) @DBG_FUNC(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i32 %34)
  %36 = load i32, i32* @PQI_STATUS_FAILURE, align 4
  store i32 %36, i32* %2, align 4
  br label %37

37:                                               ; preds = %33, %24
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @DBG_FUNC(i8*, ...) #1

declare dso_local i32 @pqisrc_alloc_and_create_ib_queues(i32*) #1

declare dso_local i32 @pqisrc_alloc_and_create_ob_queues(i32*) #1

declare dso_local i32 @pqisrc_alloc_and_create_event_queue(i32*) #1

declare dso_local i32 @pqisrc_destroy_op_ob_queues(i32*) #1

declare dso_local i32 @pqisrc_destroy_op_ib_queues(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
